2013-02-25  Terry Guo  <terry.guo@arm.com>

	Apply mainline patche
	2013-02-25  Terry Guo  <terry.guo@arm.com>
	* config/tc-arm.c (arm_cpus): Add cortex-r7 entry.
	* doc/c-arm.texi: Add cortex-r7 and missing cortex-r5 to
	list of accepted CPUs.

2013-02-15  Yufeng Zhang  <yufeng.zhang@arm.com>

	* config/tc-aarch64.c (md_begin): Change to check if 'name' is
	NULL.

2013-02-12  Yufeng Zhang  <yufeng.zhang@arm.com>

	* config/tc-aarch64.c (parse_operands): Change to compare the result
	of function call 'parse_sys_reg' with 'PARSE_FAIL' instead of 'FALSE'.

2013-01-29  Roland McGrath  <mcgrathr@google.com>

	* config/tc-arm.c (md_apply_fix): Use as_bad_where for "bad
	immediate value for 8-bit offset" error so it shows line info.

2013-01-22  Alan Modra  <amodra@gmail.com>

	Apply mainline patches
	2012-11-23  Alan Modra  <amodra@gmail.com>
	* config/tc-ppc.c (sticky): New var.
	(md_parse_option, ppc_machine): Update ppc_parse_cpu calls.

	2012-11-14  Ulrich Weigand  <uweigand@de.ibm.com>
	* config/tc-ppc.c (md_apply_fix): Leave field zero when emitting
	an ELF reloc on data as well.

	2012-11-06  Alan Modra  <amodra@gmail.com>
	* config/tc-ppc.c (md_apply_fix): Fix xcoff build breakage.

	2012-11-05  Alan Modra  <amodra@gmail.com>
	* config/tc-ppc.c (md_chars_to_number): Delete.
	(ppc_setup_opcodes): Assert num_powerpc_operands fit.
	(ppc_is_toc_sym): Move earlier in file.
	(md_assemble): Move code setting reloc from md_apply_fix.  Combine
	non-ELF code setting fixup with ELF code.  Stash opindex in
	fx_pcrel_adjust.  Adjust fixup offset for VLE.  Don't set
	fx_no_overflow here.
	(md_apply_fix): Rewrite to use ppc_insert_operand for all
	resolved instruction fields.  Leave insn field zero when
	emitting an ELF reloc in most cases.

	2012-10-29  Alan Modra  <amodra@gmail.com>
	* sb.c (sb_check): Use __builtin_clzll when size_t is not the
	same size as long.

	2012-10-26  Alan Modra  <amodra@gmail.com>
	PR gas/14758
	* config/tc-ppc.c (ppc_setup_opcodes): Fix comment.