@@ -1,0 +1,19 @@
+#objdump: -dr
+
+.*:     file format .*
+
+Disassembly of section .*:
+
+0000000000000000 <.*>:
+   0:	1e251000 	fmov	s0, #1\.200000000000000000e\+01
+   4:	1e251000 	fmov	s0, #1\.200000000000000000e\+01
+   8:	1e251000 	fmov	s0, #1\.200000000000000000e\+01
+   c:	1e351000 	fmov	s0, #-1\.200000000000000000e\+01
+  10:	1e351000 	fmov	s0, #-1\.200000000000000000e\+01
+  14:	1e351000 	fmov	s0, #-1\.200000000000000000e\+01
+  18:	1e751000 	fmov	d0, #-1\.200000000000000000e\+01
+  1c:	1e751000 	fmov	d0, #-1\.200000000000000000e\+01
+  20:	1e751000 	fmov	d0, #-1\.200000000000000000e\+01
+  24:	1e69f000 	fmov	d0, #2\.421875000000000000e-01
+  28:	1e69f000 	fmov	d0, #2\.421875000000000000e-01
+  2c:	1e29f000 	fmov	s0, #2\.421875000000000000e-01
